--- a/7_1_Verbos_pronominales_1.html
+++ b/7_1_Verbos_pronominales_1.html
@@ -49,7 +49,7 @@
 
   <div id="start-screen">
     <h2>Por favor, escriba su nombre para comenzar:</h2>
-    <input type="text" id="student-name" placeholder="Tu nombre">
+    <input type="text" id="student-name" placeholder="Su nombre">
     <br>
     <button id="start-button" onclick="startExercise()">Comenzar</button>
   </div>
