--- a/7_1_Verbos_pronominales_1.html
+++ b/7_1_Verbos_pronominales_1.html
@@ -58,7 +58,7 @@
     <div id="instructions">Instrucciones: llene los espacios en blanco con la forma apropiada del presente del verbo y una preposición si es necesaria.</div>
     <div id="progress"></div>
     <div id="question"></div>
-    <input type="text" id="answer" placeholder="Escribe aquí">
+    <input type="text" id="answer" placeholder="Escriba aquí">
     <br>
     <button id="submit" onclick="buttonAction()" disabled>Enviar</button>
     <div id="feedback"></div>
