--- a/7_1_Verbos_pronominales_1.html
+++ b/7_1_Verbos_pronominales_1.html
@@ -48,17 +48,17 @@
   <h1>Verbos pronominales</h1>
 
   <div id="start-screen">
-    <h2>Por favor, escriba su nombre para comenzar:</h2>
-    <input type="text" id="student-name" placeholder="Su nombre">
+    <h2>Por favor, escribe tu nombre para comenzar:</h2>
+    <input type="text" id="student-name" placeholder="Tu nombre">
     <br>
     <button id="start-button" onclick="startExercise()">Comenzar</button>
   </div>
 
   <div id="exercise" style="display: none;">
-    <div id="instructions">Instrucciones: llene los espacios en blanco con la forma apropiada del presente del verbo y una preposición si es necesaria.</div>
+    <div id="instructions">Instrucciones: llena los espacios en blanco con la forma apropiada del presente del verbo y una preposición si es necesaria.</div>
     <div id="progress"></div>
     <div id="question"></div>
-    <input type="text" id="answer" placeholder="Escriba aquí">
+    <input type="text" id="answer" placeholder="Escribe aquí">
     <br>
     <button id="submit" onclick="buttonAction()" disabled>Enviar</button>
     <div id="feedback"></div>
