--- a/7_1_Verbos_pronominales_espacios_2.html
+++ b/7_1_Verbos_pronominales_espacios_2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Verbos pronominales 1: espacios 2</title>
+  <title>Verbos pronominales: espacios 2</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-  <h1>Verbos pronominales 1: espacios 2</h1>
+  <h1>Verbos pronominales: espacios 2</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
