--- a/1_1_Sustantivos_y_articulos.html
+++ b/1_1_Sustantivos_y_articulos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Verbos pronominales: espacios 2</title>
+  <title>Sustantivos y artículos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
