--- a/1_1_Sustantivos_y_articulos_1.html
+++ b/1_1_Sustantivos_y_articulos_1.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sustantivos y artículos</title>
+  <title>Sustantivos y artículos: 1</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos</h1>
+  <h1>Sustantivos y artículos: 1</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar/Please write your name to start:</h2>
