--- a/1_1_Sustantivos_y_articulos_1.html
+++ b/1_1_Sustantivos_y_articulos_1.html
@@ -71,7 +71,7 @@
   </div>
 
   <div id="exercise" style="display: none;">
-    <div id="instructions">Instrucciones: Escribe el plural de los siguientes sintagmas. EJEMPLO/EXAMPLE: PREGUNTA/QUESTION: el cuaderno RESPUESTA/ANSWER: los cuadernos</div>
+    <div id="instructions">Instrucciones: Escribe el plural de los siguientes sintagmas./Write the plural of the following phrases. EJEMPLO/EXAMPLE: PREGUNTA/QUESTION: el cuaderno RESPUESTA/ANSWER: los cuadernos</div>
     <div id="progress-line">
       <div id="progress"></div>
       <div id="score"></div>
