--- a/1_1_Sustantivos_y_articulos_2.html
+++ b/1_1_Sustantivos_y_articulos_2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sustantivos y artículos: 2</title>
+  <title>Sustantivos y artículos 2</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos: 2</h1>
+  <h1>Sustantivos y artículos 2</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
@@ -88,21 +88,21 @@
 
   <script>
     const allQuestions = {
-         "un autobús": ["unos autobuses"],
-      "el hombre": ["los hombres"],
-      "la mujer": ["las mujeres"],
-      "un lápiz": ["unos lápices"],
-      "una mano": ["unas manos"],
-      "el cuaderno": ["los cuadernos"],
-      "la conversación": ["las conversaciones"],
-      "un número": ["unos números"],
-      "una maleta": ["unas maletas"],
-      "el chico": ["los chicos"],
-      "la chica": ["las chicas"],
-      "un joven": ["unos jóvenes"],
-      "una joven": ["unas jóvenes"],
-      "el turista": ["los turistas"],
-      "la turista": ["las turistas"]
+         "unos conductores": ["un conductor"],
+      "unas pasajeras": ["una pasajera"],
+      "los profesores": ["el profesor"],
+      "unos mapas": ["un mapa"],
+      "unas manos": ["una mano"],
+      "los países": ["el país"],
+      "las fotografías": ["la fotografía"],
+      "las comunidades": ["la comunidad"],
+      "unos problemas": ["un problema"],
+      "unos programas": ["un programa"],
+      "los días": ["el día"],
+      "las computadoras": ["la computadora"],
+      "unos diccionarios": ["un diccionario"],
+      "unas profesoras": ["una profesora"],
+      "los pasajeros": ["el pasajero"]
     };
 
     let fullQuestionList = Object.keys(allQuestions);
