--- a/1_1_3_Sustantivos_y_articulos_3.html
+++ b/1_1_3_Sustantivos_y_articulos_3.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sustantivos y artículos 2</title>
+  <title>Sustantivos y artículos 3</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos 2</h1>
+  <h1>Sustantivos y artículos 3</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
@@ -71,7 +71,7 @@
   </div>
 
   <div id="exercise" style="display: none;">
-    <div id="instructions">Instrucciones: Escribe el singular de los siguientes sintagmas. EJEMPLO: PREGUNTA: unos estudiantes RESPUESTA: un estudiante</div>
+    <div id="instructions">Instrucciones: Escribe el femenino de los siguientes sintagmas. EJEMPLO: PREGUNTA: el joven RESPUESTA: la joven</div>
     <div id="progress-line">
       <div id="progress"></div>
       <div id="score"></div>
@@ -88,21 +88,14 @@
 
   <script>
     const allQuestions = {
-         "unos conductores": ["un conductor"],
-      "unas pasajeras": ["una pasajera"],
-      "los profesores": ["el profesor"],
-      "unos mapas": ["un mapa"],
-      "unas manos": ["una mano"],
-      "los países": ["el país"],
-      "las fotografías": ["la fotografía"],
-      "las comunidades": ["la comunidad"],
-      "unos problemas": ["un problema"],
-      "unos programas": ["un programa"],
-      "los días": ["el día"],
-      "las computadoras": ["la computadora"],
-      "unos diccionarios": ["un diccionario"],
-      "unas profesoras": ["una profesora"],
-      "los pasajeros": ["el pasajero"]
+         "el niño": ["la niña"],
+      "el pasajero": ["la pasajera"],
+      "un estudiante": ["una estudiante"],
+      "un turista": ["una turista"],
+      "el hombre": ["la mujer"],
+      "el conductor": ["la conductora"],
+      "un profesor": ["una profesora"],
+      "un chico": ["una chica"]
     };
 
     let fullQuestionList = Object.keys(allQuestions);
