--- a/1_1_1_Sustantivos_y_articulos_1.html
+++ b/1_1_1_Sustantivos_y_articulos_1.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sustantivos y artículos: 1</title>
+  <title>Sustantivos y artículos 1: singular-plural</title>
   <style>
     body {
       font-family: Arial, sans-serif;
