--- a/1_1_2_Sustantivos_y_articulos_2.html
+++ b/1_1_2_Sustantivos_y_articulos_2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sustantivos y artículos 2</title>
+  <title>Sustantivos y artículos 2: plural-singular</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos 2</h1>
+  <h1>Sustantivos y artículos 2: plural-singular</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
