--- a/1_1_1_Sustantivos_y_articulos_1.html
+++ b/1_1_1_Sustantivos_y_articulos_1.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos: 1</h1>
+  <h1>Sustantivos y artículos 1: singular-plural</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar/Please write your name to start:</h2>
