--- a/1_1_3_Sustantivos_y_articulos_3.html
+++ b/1_1_3_Sustantivos_y_articulos_3.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Sustantivos y artículos 3</h1>
+  <h1>Sustantivos y artículos 3: masculino-femenino</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
