--- a/1_1_4_Sustantivos_y_articulos_4.html
+++ b/1_1_4_Sustantivos_y_articulos_4.html
@@ -71,7 +71,7 @@
   </div>
 
   <div id="exercise" style="display: none;">
-    <div id="instructions">Instrucciones: Escribe el plural de los siguientes sintagmas./Write the plural of the following phrases. EJEMPLO/EXAMPLE: PREGUNTA/QUESTION: el cuaderno RESPUESTA/ANSWER: los cuadernos</div>
+    <div id="instructions">Instrucciones: Traduce al español los siguientes sintagmas./Translate into Spanish the following phrases. EJEMPLO: PREGUNTA: a map RESPUESTA: un mapa</div>
     <div id="progress-line">
       <div id="progress"></div>
       <div id="score"></div>
@@ -88,21 +88,21 @@
 
   <script>
     const allQuestions = {
-         "un autobús": ["unos autobuses"],
-      "el hombre": ["los hombres"],
-      "la mujer": ["las mujeres"],
-      "un lápiz": ["unos lápices"],
-      "una mano": ["unas manos"],
-      "el cuaderno": ["los cuadernos"],
-      "la conversación": ["las conversaciones"],
-      "un número": ["unos números"],
-      "una maleta": ["unas maletas"],
-      "el chico": ["los chicos"],
-      "la chica": ["las chicas"],
-      "un joven": ["unos jóvenes"],
-      "una joven": ["unas jóvenes"],
-      "el turista": ["los turistas"],
-      "la turista": ["las turistas"]
+         "one bus": ["un autobús"],
+      "a man": ["un hombre"],
+      "some notebooks": ["unos cuadernos"],
+      "one pencil": ["un lápiz"],
+      "a hand": ["una mano"],
+      "some communities": ["unas comunidades"],
+      "a conversation": ["una conversación"],
+      "one number": ["un número"],
+      "some boys": ["unos chicos", "unos niños"],
+      "one girl": ["una chica", "una niña"],
+      "a young man": ["un joven"],
+      "some young women": ["unas jóvenes"],
+      "a female driver": ["una conductora"],
+      "one male turist": ["un turista"],
+      "some TV programs": ["unos programas de televisión"]
     };
 
     let fullQuestionList = Object.keys(allQuestions);
