--- a/1_1_4_Sustantivos_y_articulos_4.html
+++ b/1_1_4_Sustantivos_y_articulos_4.html
@@ -64,7 +64,7 @@
   <h1>Sustantivos y artículos 4: traducción</h1>
 
   <div id="start-screen">
-    <h2>Por favor, escribe tu nombre para comenzar/Please write your name to start:</h2>
+    <h2>Por favor, escribe tu nombre para comenzar:</h2>
     <input type="text" id="student-name" placeholder="Tu nombre">
     <br>
     <button id="start-button" onclick="startExercise()" disabled>Comenzar</button>
