--- a/0_Prueba_con_envio_automatico.html
+++ b/0_Prueba_con_envio_automatico.html
@@ -4,24 +4,9 @@
   <meta charset="UTF-8">
   <title>Sustantivos y artículos 3: masculino-femenino</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-      background-color: #d0d0d0;
-    }
-    #instructions, #start-screen h2 {
-      font-size: 18px;
-      margin-bottom: 20px;
-    }
-    #progress-line {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 10px;
-      font-size: 18px;
-      color: gray;
-    }
+    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; background-color: #d0d0d0; }
+    #instructions, #start-screen h2 { font-size: 18px; margin-bottom: 20px; }
+    #progress-line { display: flex; justify-content: center; gap: 30px; margin-bottom: 10px; font-size: 18px; color: gray; }
     #question { font-size: 24px; margin-bottom: 10px; }
     #answer, #student-name { font-size: 18px; padding: 8px; width: 300px; }
     #submit, #start-button { font-size: 18px; padding: 8px 16px; margin-top: 10px; }
@@ -62,19 +47,14 @@
     // === URL de tu Web App (SIN /a/) ===
     const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbxSlo-Ri5lp1L4Tt4PtjgRy8rKdNqKb_LfDTzBi78uS3GAZw0chgxZy2RIos038I4Yq-g/exec";
 
-    // Envío sin preflight: se manda como formulario URL-encoded
+    // Envío sin preflight: formulario URL-encoded
     async function sendResultsToTeacher(payload) {
       try {
         const form = new URLSearchParams();
         form.append("payload", JSON.stringify(payload));
 
-        const res = await fetch(WEBHOOK_URL, {
-          method: "POST",
-          body: form // sin Content-Type explícito => evita preflight/CORS
-        });
-
+        const res = await fetch(WEBHOOK_URL, { method: "POST", body: form });
         const data = await res.json().catch(() => ({}));
-        console.log("Envío de resultados:", data);
 
         const el = document.getElementById('summary');
         const nota = document.createElement('p');
@@ -108,6 +88,7 @@
       });
 
       return {
+        exerciseTitle: document.title,  // NUEVO: título del ejercicio
         studentName,
         totalCorrect,
         totalErrors,
