--- a/0_Prueba_con_envio_automatico.html
+++ b/0_Prueba_con_envio_automatico.html
@@ -11,7 +11,7 @@
     #answer, #student-name { font-size: 18px; padding: 8px; width: 300px; }
     #submit, #start-button, #send-teacher { font-size: 18px; padding: 8px 16px; margin-top: 10px; }
     #feedback { margin-top: 20px; font-size: 18px; }
-    #grade { margin-top: 6px; font-size: 18px; font-weight: bold; }
+    #grade { margin-top: 6px; font-size: 18px; font-weight: bold; display: none; } /* NOTA OCULTA POR DEFECTO */
     #correct-answers { margin-top: 10px; font-size: 16px; color: gray; }
     #hint { margin-top: 10px; font-size: 16px; color: gray; }
     #summary { margin-top: 30px; text-align: left; width: 60%; margin-left: auto; margin-right: auto; }
@@ -32,7 +32,7 @@
     <div id="instructions">Instrucciones: Escribe el femenino de los siguientes sintagmas. EJEMPLO: PREGUNTA: el joven RESPUESTA: la joven</div>
     <div id="progress-line">
       <div id="progress"></div>
-      <div id="score"></div>   <!-- Sólo aciertos/errores, SIN nota -->
+      <div id="score"></div>   <!-- Solo aciertos/errores, sin nota -->
     </div>
     <div id="question"></div>
     <input type="text" id="answer" placeholder="Escribe aquí">
@@ -170,6 +170,12 @@
       shuffleArray(fullQuestionList);
       document.getElementById('start-screen').style.display = 'none';
       document.getElementById('exercise').style.display = '';
+
+      // Ocultar nota mientras se trabaja
+      const gradeEl = document.getElementById('grade');
+      gradeEl.style.display = 'none';
+      gradeEl.innerText = '';
+
       pickQuestion();
     }
 
@@ -177,7 +183,7 @@
       const currentNumber = index + 1;
       const total = fullQuestionList.length;
       document.getElementById('progress').innerText = `Pregunta ${currentNumber} de ${total}`;
-      // Solo aciertos y errores (SIN nota)
+      // Solo aciertos y errores (SIN nota mientras se trabaja)
       document.getElementById('score').innerText =
         `Aciertos: ${totalCorrect} · Errores: ${totalErrors}`;
     }
@@ -193,7 +199,10 @@
           document.getElementById('submit').disabled = false;
           document.getElementById('submit').style.display = '';
           document.getElementById('feedback').innerText = '';
-          document.getElementById('grade').innerText = ''; // limpia (nota solo al final)
+          // Ocultar nota mientras se trabaja
+          const gradeEl = document.getElementById('grade');
+          gradeEl.style.display = 'none';
+          gradeEl.innerText = '';
           document.getElementById('correct-answers').innerText = '';
           document.getElementById('hint').innerText = 'Pulsa ENTER o haz clic en CONTINUAR';
           document.getElementById('summary').innerHTML = '';
@@ -209,7 +218,10 @@
         document.getElementById('answer').disabled = false;
         document.getElementById('answer').style.display = '';
         document.getElementById('feedback').innerText = '';
-        document.getElementById('grade').innerText = ''; // limpia (nota solo al final)
+        // Ocultar nota mientras se trabaja
+        const gradeEl = document.getElementById('grade');
+        gradeEl.style.display = 'none';
+        gradeEl.innerText = '';
         document.getElementById('correct-answers').innerText = '';
         document.getElementById('hint').innerText = '';
         document.getElementById('submit').innerText = 'Enviar';
@@ -254,8 +266,10 @@
       document.getElementById('correct-answers').innerText = '';
       document.getElementById('hint').innerText = '';
 
-      // Nota final (solo aquí)
-      document.getElementById('grade').innerText = `Nota: ${computePercent()}%`;
+      // Mostrar nota final SOLO aquí
+      const gradeEl = document.getElementById('grade');
+      gradeEl.style.display = 'block';
+      gradeEl.innerText = `Nota: ${computePercent()}%`;
 
       // Resumen de errores únicos
       if (errorDetails.length > 0) {
